tests/rspack-test/cacheCases/invalidation/symlink/driver.js
export default 0;
---
export default 1;
